# udp2raw-ng

./: .gitignore  Cargo.toml  README.md
crates/udp2raw-ng/: Cargo.toml
crates/udp2raw-ng-core/: Cargo.toml
crates/udp2raw-ng-core/src/: config.rs  crypto.rs  engine.rs  error.rs  handshake.rs  id.rs  lib.rs  protocol.rs  record.rs  replay.rs  secret.rs
crates/udp2raw-ng-core/tests/: secure_session.rs  wire_frame.rs
crates/udp2raw-ng-net/: Cargo.toml
crates/udp2raw-ng-net/src/: lib.rs  linux.rs  memory.rs
crates/udp2raw-ng-net/tests/: memory_transport.rs
crates/udp2raw-ng/src/: lib.rs  main.rs
crates/udp2raw-ng/tests/: managed_service.rs
docs/: architecture.md  implementation-status.md  next-stage-plan.md  udp2raw-ng-spec.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_wire_frame.rs
