[package]
name = "udp2raw-ng-core"
description = "Platform-independent protocol engine for udp2raw-ng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
